force-app/main/default/objects/GPMS_Service_History__c/GPMS_Service_History__c.object-meta.xml
<CustomObject>
    <label>Service History</label>
    <nameField>
        <displayFormat>SVH-{00000}</displayFormat>
        <label>Service History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>