force-app/main/default/objects/GPMS_Service_History__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <description>Additional Information for the service.</description>
    <label>Additional Information</label>
    <length>50</length>
    <type>Text</type>
</CustomField>