force-app/main/default/objects/GPMS_Service_History__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <description>Related service.</description>
    <label>Service</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Service History</relationshipLabel>
    <relationshipName>Service_Status_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>