force-app/main/default/objects/GPMS_Service_History__c/fields/Service_Care_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Care_Type__c</fullName>
    <description>Care Type of the Service record, used for displaying/hiding dynamic actions on lightning pages.</description>
    <formula>TEXT(Service__r.Care_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Care Type</label>
    <type>Text</type>
</CustomField>