force-app/main/default/objects/GPMS_Service_History__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Record status of Service.</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>