force-app/main/default/objects/GPMS_Service_History__c/fields/Status_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_End_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Status End Date</label>
    <type>Date</type>
</CustomField>