force-app/main/default/objects/GPMS_Service_History__c/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Status Reason</label>
    <length>200</length>
    <type>Text</type>
</CustomField>